test/kubernetes/admin-server-service.yaml
apiVersion: v1
kind: Service
metadata:

  creationTimestamp: null
  labels:
    service: admin-server
  name: admin-server
spec:
  type: LoadBalancer
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    service: admin-server
status:
  loadBalancer: {}
