test/kubernetes/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: api-gateway
    spec:
      imagePullSecrets:
          - name: gcr-json-key 
      containers:
      - name: api-gateway
        image: europe-west1-docker.pkg.dev/certain-purpose-392407/petclinic-microservices/springcommunity/spring-petclinic-api-gateway:latest
        command:
          - ./dockerize
          - -wait=tcp://discovery-server:8761
          - -timeout=60s
          - --
          - java
          - org.springframework.boot.loader.JarLauncher
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}

 
---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: api-gateway
spec:
  maxReplicas: 7
  minReplicas: 3
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: api-gateway
  targetCPUUtilizationPercentage: 75
status:
  currentReplicas: 5
  desiredReplicas: 3
