test/kubernetes/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: config-server
  name: config-server
spec:
  type: LoadBalancer
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    service: config-server
status:
  loadBalancer: {}
