test/kubernetes/customers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: customers-service
  name: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: customers-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: customers-service
    spec:
      imagePullSecrets:
        - name: gcr-json-key 
      containers:
     
      - command:
        image: europe-west1-docker.pkg.dev/certain-purpose-392407/petclinic-microservices/springcommunity/spring-petclinic-customers-service:latest
        name: customers-service
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
status: {}
