test/kubernetes/customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: customers-service
  name: customers-service
spec:
  type: LoadBalancer
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    service: customers-service
status:
  loadBalancer: {}
