test/kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: mysql:8
          name: mysql
          env:  
            - name: MYSQL_USER
              value: spring
            - name: MYSQL_PASSWORD
              value: spring
            - name: MYSQL_ROOT_PASSWORD
              value: petclinic
            - name: MYSQL_DATABASE
              value: petclinic
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---

apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
 name: hpa-db
spec:
 scaleTargetRef:
   apiVersion: apps/v1
   kind: Deployment
   name: db
 minReplicas: 1
 maxReplicas: 10
 targetCPUUtilizationPercentage: 50
