test/kubernetes/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  creationTimestamp: null
  labels:
    service: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      service: discovery-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: discovery-server
    spec:
      imagePullSecrets:
        - name: gcr-json-key 
      containers:
      - name: discovery-server

        image: europe-west1-docker.pkg.dev/certain-purpose-392407/petclinic-microservices/springcommunity/spring-petclinic-discovery-server:preprod
        command:
          - ./dockerize
          - -wait=tcp://config-server:8888
          - -timeout=60s
          - --
          - java
          - org.springframework.boot.loader.JarLauncher
        ports:
        - containerPort: 8761
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: discovery-server
spec:
  maxReplicas: 7
  minReplicas: 3
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: discovery-server
  targetCPUUtilizationPercentage: 75
status:
  currentReplicas: 5
  desiredReplicas: 3
