test/kubernetes/discovery-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: discovery-server
  name: discovery-server
spec:
  type: LoadBalancer
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
  selector:
    service: discovery-server
status:
  loadBalancer: {}
