test/kubernetes/tracing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  creationTimestamp: null
  labels:
    service: tracing-server
  name: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      service: tracing-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: tracing-server
    spec:
      imagePullSecrets:
        - name: gcr-json-key 
      containers:
      - command:
        image: europe-west1-docker.pkg.dev/certain-purpose-392407/petclinic-microservices/openzipkin/zipkin:prod
        name: tracing-server
        env: 
        - name: JAVA_OPTS
          value: -XX:+UnlockExperimentalVMOptions -Djava.security.egd=file:/dev/./urandom
        ports:
        - containerPort: 9411
        resources: {}
      restartPolicy: Always

status: {}

---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: tracing-server
spec:
  maxReplicas: 7
  minReplicas: 3
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: tracing-server
  targetCPUUtilizationPercentage: 75
status:
  currentReplicas: 5
  desiredReplicas: 3
