test/kubernetes/tracing-server-service.yaml
apiVersion: v1
kind: Service
metadata:

  creationTimestamp: null
  labels:
    service: tracing-server
  name: tracing-server
spec:
  type: LoadBalancer
  ports:
  - name: "9411"
    port: 9411
    targetPort: 9411
  selector:
    service: tracing-server
status:
  loadBalancer: {}
