test/kubernetes/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: vets-service
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: vets-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: vets-service
    spec:
      containers:
      - command:
        - ./wait-for-it.sh
        - discovery-server:8761
        - --timeout=60
        - --
        - java
        - -Djava.security.egd=file:/dev/./urandom
        - -jar
        - /app.jar
        image: europe-west1-docker.pkg.dev/certain-purpose-392407/petclinic-microservices/springcommunity/spring-petclinic-vets-service:latest
        name: vets-service
        ports:
        - containerPort: 8083
        resources: {}
      restartPolicy: Always
status: {}
