test/kubernetes/vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:

  creationTimestamp: null
  labels:
    service: vets-service
  name: vets-service
spec:
  type: LoadBalancer
  ports:
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    service: vets-service
status:
  loadBalancer: {}
