test/kubernetes/visits-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: visits-service
    customer-db: db
  name: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: visits-service
      customer-db: db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: visits-service
        customer-db: db
    spec:
      imagePullSecrets:
        - name: gcr-json-key 
      containers:
      
  
      - name: visits-service
        image: europe-west1-docker.pkg.dev/certain-purpose-392407/petclinic-microservices/springcommunity/spring-petclinic-visits-service:latest
        command:
          - ./dockerize
          - -wait=tcp://discovery-server:8761
          - -timeout=60s
          - --
          - java
          - org.springframework.boot.loader.JarLauncher
        env:
        # - name: DB_HOST
        #   value: yefsah-hayet:europe-west1:petclinic-instance=tcp
        # - name: DB_USER
        #   value: spring
        # - name: DB_PASS
        #   value: spring
        # - name: DB_NAME
        #   value: petclinic
        # - name: SPRING_PROFILES_ACTIVE 
        #   value: docker,mysql

        - name: management.endpoint.health.show-details
          value: always
        
        # - name: CONFIG_SERVER_URL
        #   value: config-server:8888

        ports:
        - containerPort: 8082
        resources: {}

    
      # - name: cloud-sql-proxy
      #   image: gcr.io/cloudsql-docker/gce-proxy:1.28.0 # make sure the use the latest version
      #   command:
      #     - "/cloud_sql_proxy"
      #     #- "-ip_address_types=PRIVATE"
      #     - "-instances=yefsah-hayet:europe-west1:petclinic-instance=tcp:3306" 
      #     - "-credential_file=/secrets/service_account.json"
      #   securityContext:
          
      #     runAsNonRoot: true
      #   volumeMounts:
      #   - name: sa-volume
      #     mountPath: /secrets/
      #     readOnly: true
      #   # resources:
      #   #   requests:
            
      #   #     memory: "2Gi"
          
      #   #     cpu:    "1"
      # volumes:
      #   - name: sa-volume
      #     secret:
      #       secretName: sa-db
            
      restartPolicy: Always
status: {}
  

---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: visits-service
spec:
  maxReplicas: 7
  minReplicas: 3
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: visits-service
  targetCPUUtilizationPercentage: 75
status:
  currentReplicas: 5
  desiredReplicas: 3

# ---
# apiVersion: keda.sh/v1alpha1
# kind: ScaledObject
# metadata:
#   name: visits-service
# spec:
#   scaleTargetRef:
#     name: visits-service
#   triggers:
#   - type: cron
#     metadata:
#       timezone: Europe/Paris
#       start: 0 8 * * *
#       end: 0 19 * * *
#       desiredReplicas: "1"
