test/kubernetes/visits-service-service.yaml
apiVersion: v1
kind: Service
metadata:

  creationTimestamp: null
  labels:
    service: visits-service
  name: visits-service
spec:
  type: LoadBalancer
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    service: visits-service
status:
  loadBalancer: {}
